fix: attempt to fix code smells